# FlowCut

./: .gitignore  README.md  cleanup-macos-artifacts.sh  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
docs/: errors-and-hallucinations.md
docs/api/: contracts.md
docs/architecture/: command-system.md  overview.md  state-machine.md
docs/decisions/: adr.md
docs/domain/: model.md
docs/flows/: main-flows.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/apps/cloud-api/api/: routes.ts
src/apps/cloud-api/core/: index.ts
src/apps/cloud-api/domain/: index.ts
src/apps/cloud-api/factory/: index.ts
src/apps/cloud-api/integrations/: index.ts
src/apps/cloud-api/mapper/: index.ts
src/apps/cloud-api/repository/: index.ts
src/apps/cloud-api/schemas/: index.ts
src/apps/cloud-api/services/: index.ts
src/apps/desktop/components/: AIAssistant.tsx  CaptionPanel.tsx  DiagnosticsPanel.tsx  EditorToolbar.tsx  JobsPanel.tsx  JobsPanelEnhanced.tsx  PresetsPanel.tsx  PreviewPlayer.tsx  RemoverViciosPanel.tsx  SaveIndicator.tsx  SemanticTimelinePanel.tsx  TranscriptPanel.tsx  UndoRedoIndicator.tsx
src/apps/desktop/core/: autosave.ts  command-system.ts  editor-state-machine.ts  job-queue.ts  logger.ts
src/apps/desktop/hooks/: useKeyboardShortcuts.ts
src/apps/desktop/mocks/: mock-data.ts
src/apps/desktop/pages/: ExportPage.tsx  (+3 more)
src/apps/local-engine/: main.py  requirements.txt
src/test/: autosave.test.ts  command-system.test.ts  editor-state-machine.test.ts  logger.test.ts
(+19 files in other folders)
